Fonts and Imges

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div id="elems">
                 <div id="elm1">
                     <div class="img-div">
-                        <img src="img/L4hEp.jpg" alt="">
+                        <img src="img/L4hEp.webp" alt="">
                     </div>
                     <h3>AVRO | KO <span>NEW</span></h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima fuga ipsa perferendis maiores sed molestias, labore omnis atque totam odit.</p>
@@ -49,11 +49,11 @@
             <div id="page2-left">
                 <h2>INTERACTIVE</h2>
                 <h1>ARTIST!</h1>
-                <img src="/img/KrWmB.jpg" alt="">
+                <img src="/img/KrWmB.webp" alt="">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque magni illo nam est deserunt ducimus exercitationem fugit. Impedit, consectetur nisi eligendi dicta quibusdam excepturi exercitationem deleniti, delectus ratione et corrupti!</p>
             </div>
             <div id="page2-right">
-                <img src="/img/DvDXq.jpg" alt="">
+                <img src="/img/DvDXq.webp" alt="">
                 <h1>DIGITAL ART DIRECTOR</h1>
                 <h1>INTERACTIVE DESIGNER</h1>
                 <h1>CREATIVE DEVELOPER</h1>
@@ -84,7 +84,7 @@
                    </div>
               </div>
               <div class="page4-left-bottom">
-                <img src="/img/7kcEF.jpg" alt="">
+                <img src="/img/7kcEF.webp" alt="">
               </div>
 
             </div>
@@ -131,7 +131,7 @@
                 <div class="left">
                     <div class="pic-text">
                         <div class="elm1">
-                            <img src="/img/ue7OF.jpg" alt="">
+                            <img src="/img/ue7OF.webp" alt="">
                           
                         </div>
                         <div class="elm2">
@@ -143,13 +143,13 @@
                     </div>
                 </div>
                 <div class="right">
-                    <img src="/img/1hxZr.jpg" alt="">
+                    <img src="/img/1hxZr.webp" alt="">
                 </div>
             </div>
 
             <div class="bottom">
                 <div class="elm1">
-                    <img src="/img/AWRSe.jpg" alt="">
+                    <img src="/img/AWRSe.webp" alt="">
                 </div>
                 <div class="elm2">
                         <h1>PERFECT</h1>                    
@@ -175,7 +175,7 @@
 
                             <div class="dp-text">
                                 <div class="elm1">
-                                    <img src="/img/6172987a792f18104ce0ce14_sam-day.jpg" alt="">
+                                    <img src="/img/6172987a792f18104ce0ce14_sam-day.webp" alt="">
                                 </div>
                                 <div class="elm2">
                                     <h1>SAM WAY </h1>
@@ -190,7 +190,7 @@
 
                             <div class="dp-text">
                                 <div class="elm1">
-                                    <img src="/img/615b54ee54045a4769f04eba_sofia-papadopoulou.jpg" alt="">
+                                    <img src="/img/615b54ee54045a4769f04eba_sofia-papadopoulou.webp" alt="">
                                 </div>
                                 <div class="elm2">
                                     <h1>SOFIA PAPADOPOULU </h1>
@@ -205,7 +205,7 @@
 
                             <div class="dp-text">
                                 <div class="elm1">
-                                    <img src="/img/615b54ee0df682e04e089676_bruno-arizio.jpg" alt="">
+                                    <img src="/img/615b54ee0df682e04e089676_bruno-arizio.webp" alt="">
                                 </div>
                                 <div class="elm2">
                                     <h1>ENEA ROSSI </h1>
@@ -220,7 +220,7 @@
 
                             <div class="dp-text">
                                 <div class="elm1">
-                                    <img src="/img/615b54ee9805af64275d2b44_enea-rossi.jpg" alt="">
+                                    <img src="/img/615b54ee9805af64275d2b44_enea-rossi.webp" alt="">
                                 </div>
                                 <div class="elm2">
                                     <h1>ENEA ROSSI </h1>
@@ -239,7 +239,7 @@
             <div id="elems">
                 <div id="elm1">
                     <div class="img-div">
-                        <img src="img/L4hEp.jpg" alt="">
+                        <img src="img/L4hEp.webp" alt="">
                     </div>
                     <h3>AVRO | KO <span>NEW</span></h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima fuga ipsa perferendis maiores sed molestias, labore omnis atque totam odit.</p>
